CS5709: Added JSDoc

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,27 +1,132 @@
 {
+  /**
+   * TypeScript Configuration for Application Code
+   *
+   * This configuration applies to all source code in the src/ directory.
+   * It's optimized for modern React development with strict type checking.
+   */
   "compilerOptions": {
+    /**
+     * Cache file location for incremental builds
+     * Stores type information to speed up subsequent compilations
+     */
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+
+    /**
+     * Target ECMAScript version for compiled output
+     * ES2022 includes features like top-level await, class fields, private methods
+     */
     "target": "ES2022",
+
+    /**
+     * Use ECMAScript-standard semantics for class fields
+     * Ensures compatibility with modern JavaScript class behavior
+     */
     "useDefineForClassFields": true,
+
+    /**
+     * Type definition libraries to include
+     * - ES2022: Modern JavaScript APIs (Promise.any, Array.at, etc.)
+     * - DOM: Browser APIs (document, window, HTMLElement, etc.)
+     * - DOM.Iterable: Makes DOM collections iterable (NodeList, HTMLCollection)
+     */
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
+
+    /**
+     * Module code generation
+     * ESNext uses the latest ES module syntax (import/export)
+     */
     "module": "ESNext",
+
+    /**
+     * Skip type checking of declaration files (*.d.ts)
+     * Improves compilation speed by trusting library type definitions
+     */
     "skipLibCheck": true,
 
-    /* Bundler mode */
+    /* Bundler mode - Optimized for Vite bundler */
+
+    /**
+     * Module resolution strategy
+     * "bundler" is optimized for modern bundlers like Vite, Webpack, esbuild
+     * Handles bare imports, package exports, and TypeScript-specific features
+     */
     "moduleResolution": "bundler",
+
+    /**
+     * Allow importing TypeScript files with extensions (.ts, .tsx)
+     * Useful for explicit imports: import { foo } from './file.ts'
+     */
     "allowImportingTsExtensions": true,
+
+    /**
+     * Preserve import/export syntax exactly as written
+     * Prevents automatic elision of type-only imports
+     */
     "verbatimModuleSyntax": true,
+
+    /**
+     * Force all files to be treated as modules
+     * Even files without import/export are considered ES modules
+     */
     "moduleDetection": "force",
+
+    /**
+     * Don't emit JavaScript files
+     * Vite handles compilation; TypeScript only used for type checking
+     */
     "noEmit": true,
+
+    /**
+     * JSX transformation mode
+     * "react-jsx" uses React 17+ automatic JSX runtime
+     * No need to import React in every file
+     */
     "jsx": "react-jsx",
 
-    /* Linting */
+    /* Linting - Strict type checking options */
+
+    /**
+     * Enable all strict type checking options
+     * Includes: strictNullChecks, strictFunctionTypes, strictBindCallApply,
+     * strictPropertyInitialization, noImplicitThis, alwaysStrict
+     */
     "strict": true,
+
+    /**
+     * Report errors on unused local variables
+     * Helps keep code clean and maintainable
+     */
     "noUnusedLocals": true,
+
+    /**
+     * Report errors on unused function parameters
+     * Use underscore prefix (_param) to mark intentionally unused parameters
+     */
     "noUnusedParameters": true,
+
+    /**
+     * Only allow syntax that can be erased without runtime overhead
+     * Prevents TypeScript-specific features that require JavaScript runtime support
+     */
     "erasableSyntaxOnly": true,
+
+    /**
+     * Report errors for fallthrough cases in switch statements
+     * Prevents common bug where break is forgotten
+     */
     "noFallthroughCasesInSwitch": true,
+
+    /**
+     * Require explicit types for imports with side effects
+     * Ensures clarity about which imports are type-only vs runtime
+     */
     "noUncheckedSideEffectImports": true
   },
+
+  /**
+   * Files to include in compilation
+   * All TypeScript files in the src/ directory
+   */
   "include": ["src"]
 }
